# okapi

examples/json-web-api/: Cargo.toml
examples/uuid/: Cargo.toml
examples/uuid/src/: main.rs
okapi/: Cargo.toml
rocket-okapi/: Cargo.toml
rocket-okapi-codegen/: Cargo.toml
rocket-okapi/src/request/: from_form_param_impls.rs  from_param_impls.rs
